# Mini-Exchange-Simulator

./: .gitignore  README.md
exchange/: .clang-format  .clang-tidy  .dockerignore  CMakeLists.txt
exchange/cmake/: CompilerWarnings.cmake
exchange/common/: CMakeLists.txt
exchange/common/include/common/: Logger.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  PriceLevel.hpp  Trade.hpp  Types.hpp
exchange/common/src/: Logger.cpp
exchange/docker/: base.Dockerfile
exchange/tests/: CMakeLists.txt
exchange/tests/common/: MatchingEngineTests.cpp  OrderBookTests.cpp  OrderTests.cpp  PriceLevelTests.cpp  TradeTests.cpp
